Fix for a few layout issues present on homepage

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -174,9 +174,14 @@
 }
 
 .home .site-footer {
+  width: 90%;
+  max-width: 90em;
+  margin: 0 auto;
+  padding-left: 0;
+  padding-right: 0;
+
   @media screen and (min-width: 28.125em) {
-    padding-left: 10%;
-    padding-right: 10%;
+    width: 80%;
   }
 }
 
@@ -267,7 +272,10 @@
   ul {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 -2%;
+
+    @media screen and (min-width: 37.5em) {
+      margin: 0 -2%;
+    }
   }
 
   li {
